fix: added a bit of padding to fix the search bar overlapping

--- a/Addons/FriendGrid.css
+++ b/Addons/FriendGrid.css
@@ -128,7 +128,7 @@
     margin: 0px;
     width: 100%;
     border-radius: var(--FG-search-radius);
-    top: 24px
+    padding: 5px;
 }
 
 .peopleColumn_c2739c .peopleList_e0840f > div {
